--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@react-email/components": "1.0.6",
     "@tediousjs/connection-string": "0.5.0",
+    "dayjs": "^1.11.19",
     "kysely": "^0.28.10",
     "react": "19.2.4",
     "react-dom": "19.2.4",
