--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/app.js",
+  "type": "module",
   "scripts": {
     "scaffold": "kysely-codegen --out-file ./src/lib/types/database.d.ts",
     "format": "biome format --write ./src/**/*.{ts,tsx,js,jsx,json,css,md}",
     "lint": "biome lint --write ./src/**/*.{ts,tsx,js,jsx,json,css,md}",
     "check": "biome check ./src/**/*.{ts,tsx,js,jsx,json,css,md}",
+    "build": "tsc --outDir ./dist --project tsconfig.json",
+    "dev": "tsx ./src/app.ts run",
+    "start": "node ./dist/app.js run",
     "email:dev": "email dev"
   },
   "keywords": [],
@@ -19,6 +23,7 @@
     "@react-email/preview-server": "5.2.5",
     "kysely-codegen": "^0.19.0",
     "react-email": "5.2.5",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
