--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tediousjs/connection-string": "0.5.0",
     "commander": "^14.0.2",
     "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
     "kysely": "^0.28.10",
     "react": "19.2.4",
     "react-dom": "19.2.4",
