--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "kysely": "^0.28.10",
+    "nodemailer": "^7.0.13",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "tarn": "^3.0.2",
