--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.13",
     "@react-email/preview-server": "5.2.5",
+    "@types/nodemailer": "^7.0.9",
     "kysely-codegen": "^0.19.0",
     "react-email": "5.2.5",
     "tsx": "^4.21.0",
