build: reorder scripts

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "biome lint --write ./src/**/*.{ts,tsx,js,jsx,json,css,md}",
     "check": "biome check ./src/**/*.{ts,tsx,js,jsx,json,css,md}",
     "build": "tsc --outDir ./dist --project tsconfig.json",
-    "dev": "tsx ./src/app.ts run",
     "start": "node ./dist/app.js run",
-    "email:dev": "email dev",
+    "dev": "tsx ./src/app.ts run",
+    "dev:email": "email dev",
     "compile": "C:/Users/ricardo.valdovinos/.bun/bin/bun.exe build ./src/app.ts --compile --outfile web-quote-emailer.exe",
     "deploy": "pnpm run compile && cp ./web-quote-emailer.exe \\\\rdsbroker\\fdrive\\tech\\ScheduledTasks\\web-quote-emailer\\web-quote-emailer.exe"
   },
